Updated lib and refactored a few more classes.